💄 방정보 타임테이블 css 수정

--- a/frontend/src/styles/Calendar.css
+++ b/frontend/src/styles/Calendar.css
@@ -11,6 +11,24 @@
   height: 2rem;
   margin: 0;
 }
+
+.react-calendar__navigation {
+  display: flex;
+  align-items: center;
+  height: 100%;
+
+  button {
+    width: 3rem;
+    min-width: none;
+    padding: 0.2rem 0;
+  }
+}
+
+.react-calendar__navigation__label__labelText {
+  font-family: Pretendard-Regular;
+  font-size: 1.2rem;
+}
+
 .react-calendar__month-view__weekdays__weekday {
   display: flex;
   justify-content: center;
