💄캘린더 네브바 양쪽 버튼 border-radius 적용

--- a/frontend/src/styles/Calendar.css
+++ b/frontend/src/styles/Calendar.css
@@ -23,6 +23,14 @@
   }
 }
 
+.react-calendar__navigation__prev2-button {
+  border-top-left-radius: 0.6rem;
+}
+
+.react-calendar__navigation__next2-button {
+  border-top-right-radius: 0.6rem;
+}
+
 .react-calendar__navigation__label__labelText {
   font-family: Pretendard-Regular;
   font-size: 1.2rem;
